[gd_scene load_steps=3 format=3 uid="uid://dd7hdx0lpmffr"]

[ext_resource type="Script" path="res://Scripts/boss_card_interact.gd" id="1_rh0ya"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ed58t"]
radius = 61.2046

[node name="BossCardInteract" type="Area2D"]
script = ExtResource("1_rh0ya")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ed58t")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
